nav shift fixed

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,7 +1,8 @@
 .App {
     color: antiquewhite;
     min-height: 100%;
-    width: 100%;
+    min-width: 100%;
+    margin: 0;
 }
 
 .App a {
