--- a/src/DevHeader/DevHeader.css
+++ b/src/DevHeader/DevHeader.css
@@ -64,7 +64,6 @@ nav a:link {
 nav a:hover {
     background: rgb(232, 226, 54);
     color: rgb(40, 130, 179);
-    font-weight: bold;
     border-bottom: 1px solid rgb(232, 226, 54);
 }
 
